# linkedin-mcp-server

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
src/linkedin_mcp_server/: __init__.py  __main__.py  container.py
src/linkedin_mcp_server/adapters/: __init__.py
src/linkedin_mcp_server/adapters/driven/: __init__.py  env_config.py  patchright_browser.py  profile_auth.py
src/linkedin_mcp_server/adapters/driving/: __init__.py  cli.py  error_mapping.py  mcp_server.py  serialization.py
src/linkedin_mcp_server/adapters/driving/mcp_tools/: __init__.py  company.py  job.py  person.py  session.py
src/linkedin_mcp_server/application/: __init__.py  manage_session.py  scrape_company.py  scrape_job.py  scrape_person.py  search_jobs.py  search_people.py
src/linkedin_mcp_server/domain/: exceptions.py  value_objects.py
src/linkedin_mcp_server/domain/models/: __init__.py  company.py  job.py  person.py  responses.py  search.py
src/linkedin_mcp_server/domain/parsers/: __init__.py  common.py  company.py  job.py  person.py  search.py
src/linkedin_mcp_server/ports/: __init__.py  auth.py  browser.py  config.py
